# backslushy

./: README.md  components.json  package.json  svelte.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: alias-preview.ts  aliases.ts
src/lib/components/ui/badge/: badge.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/input/: input.svelte
src/routes/: +layout.ts  +page.svelte
